word with space

--- a/.ai-prompts.md
+++ b/.ai-prompts.md
@@ -56,12 +56,7 @@ Note: Gihub Copilot and Supermaven Neovim plugins do that.
 
 The suggestion might be on the same line as the cursor or on a different line: we have to handle that case.
 
-With the current implementation, if the suggestion is on the same line as the cursor, he get the following error:
+With the current implementation, when the user accepts a word, the word is inserted at the same position as the cursor but without space.
 
-```
-E5108: Error executing lua ...m/lazy/deepseek-complete/lua/rktmb-deepseek-complete.lua:92: attempt to get length of local 'leading_newlines' (a nil value)
-```
+Tell me the steps to implement the word-by-word acceptance but with a space between the words.
 
-This is because `M.accept_suggestion_word()` looks for a leading newline character in the suggestion but there is none because the suggestion is on the same line as the cursor.
-
-Tell me the changes I need to make in order to achieve accepting one word of a suggestion when issuing the `<M-Right>` key until the end of the line. Then continue to the next line, and so on.
