provide the other plugins code in order to help

--- a/.ai-prompts.md
+++ b/.ai-prompts.md
@@ -47,16 +47,12 @@ This is the behavior I want.
 
 ## Step 7: accept the suggestion word by word
 
+Note: I want to implement the same accept word as Gihub Copilot and Supermaven Neovim plugins. I provided their code in the `./other-plugins` directory.
+
 When a suggestion is displayed, I want the user to be able to accept one word with the `<M-Right>` key.
 
-As far as there is a suggestion, if the user presses `<M-Right>`, 
-the first word of the suggestion is accepted and transformed into text at the same position.
-
-Note: Gihub Copilot and Supermaven Neovim plugins do that.
+As far as there is a suggestion, if the user presses `<M-Right>`, the first word of the suggestion is accepted and transformed into text at the same position.
 
 The suggestion might be on the same line as the cursor or on a different line: we have to handle that case.
 
-With the current implementation, when the user accepts a word, the word is inserted at the same position as the cursor but without space.
-
-Tell me the steps to implement the word-by-word acceptance but with a space between the words.
-
+Give me the code of the `M.accept_suggestion_word()` function that implements this behavior.
