--- a/.ai-prompts.md
+++ b/.ai-prompts.md
@@ -50,9 +50,10 @@ This is the behavior I want.
 Note: I want to implement the same accept word as Gihub Copilot and Supermaven Neovim plugins. I provided their code in the `./other-plugins` directory.
 
 When a suggestion is displayed, I want the user to be able to accept one word with the `<M-Right>` key.
-
 As far as there is a suggestion, if the user presses `<M-Right>`, the first word of the suggestion is accepted and transformed into text at the same position.
 
 The suggestion might be on the same line as the cursor or on a different line: we have to handle that case.
 
-Give me the code of the `M.accept_suggestion_word()` function that implements this behavior.
+With the curent implementation, when the user presses `<M-Right>`, the suggestion is cleared.
+
+Give me the modified code of the `M.accept_suggestion_word()` function that implements the behavior I want.
