--- a/.ai-history/2025-01-09_15h-04m-11s_gemini_1736424251.md
+++ b/.ai-history/2025-01-09_15h-04m-11s_gemini_1736424251.md
@@ -1,3 +1,69 @@
+# Propose inline suggestions from DeepSeek API
+
+The final purpose of this project is to be an inline suggestion plugin that uses the DeepSeek API to suggest completions.
+
+I already have some pieces of code.
+I need you to generate the missing parts.
+
+## Step 1: Get the text from the beginning of the current buffer to the cursor
+
+The cursor position is a tuple of (row, column), where row is the line number and column is the character position within the line.
+The code to get the text from the beginning of the current buffer to the cursor is `./lua/rktmb-deepseek-complete.lua` function `M.get_text_before_cursor()`.
+
+## Step 2: Get the text from the cursor to the end of the current buffer
+
+In `./lua/rktmb-deepseek-complete.lua` I created the function `M.get_text_after_cursor()` 
+that returns the text from the cursor to the end of the current buffer.
+
+## Step 3: Query the DeepSeek API
+
+When the user presses `<M-ESC>`, the function `suggest()` is called. That is the behavior I want.
+Also, now, if in INSERT mode and the user presses the space key, `suggest()` is called.
+
+That is the behavior I want.
+
+## Step 4: Insert the suggestion as extmark
+
+Now the suggestion returned by the DeepSeek API is inserted as an extmark.
+The extmark starts after the cursor position, NOT at the end of the line.
+The suggestion first line is displayed on the same line as the cursor and the remaining lines are displayed below the cursor, 
+pushing down the text below the cursor.
+
+That is the expected behavior.
+
+## Step 5: Avoid trigerring the suggestion too often
+
+When the user types fast, the suggestion may only be triggered if the last HTTP response has been received for more than 1 second.
+That is the behavior I want.
+
+## Step 6: Clear the suggestion when the user types.
+
+As the user types `<M-ESC>` key, a suggestion is triggered and the suggestion is displayed as an extmark.
+If the user continues typing, the suggestion is cleared.
+If the types `<M-ESC>` key again, the suggestion is triggered and the new suggestion is displayed when it arrives.
+This is repeatable any number of times.
+
+This is the behavior I want.
+
+## Step 7: accept the suggestion word by word
+
+Note: I want to implement the same accept word as Gihub Copilot and Supermaven Neovim plugins. I provided their code in the `./other-plugins` directory.
+
+When a suggestion is displayed, I want the user to be able to accept one word with the `<M-Right>` key.
+As far as there is a suggestion, if the user presses `<M-Right>`, the first word of the suggestion is accepted and transformed into text at the same position.
+
+The suggestion might be on the same line as the cursor or on a different line: we have to handle that case.
+
+With the curent implementation, when the user presses `<M-Right>`, the suggestion is cleared.
+
+Give me the modified code of the `M.accept_suggestion_word()` function that implements the behavior I want.
+
+
+
+# This is gemini-1.5-pro-latest answer (43k in, 3k out)
+
+```lua
+-- lua/rktmb-deepseek-complete.lua
 -- Initialize a module
 local M = {}
 
@@ -59,14 +125,14 @@ function M.accept_suggestion_word()
 
   suggestion = M.remove_markdown_delimiters(suggestion)
   -- Extract the first word from the suggestion
-  local first_word = string.match(suggestion, "^%%s*(%%S+)") or ""
+  local first_word = string.match(suggestion, "^%%%%s*(%%%%S+)") or ""
 
   if first_word ~= "" then
     vim.api.nvim_buf_set_text(0, current_row - 1, current_col, current_row - 1, current_col, { first_word })
     vim.api.nvim_win_set_cursor(0, { current_row, current_col + #first_word })
 
     -- Update current_suggestion, removing the accepted word and leading/trailing whitespace
-    _G.current_suggestion = string.match(suggestion, "^%%s*" .. first_word .. "%%s*(.*)") or ""
+    _G.current_suggestion = string.match(suggestion, "^%%%%s*" .. first_word .. "%%%%s*(.*)") or ""
 
     -- Clear the suggestion if it's empty, otherwise re-display it
     if _G.current_suggestion == "" then
@@ -220,4 +286,127 @@ end
 
 
 return M
+```
+
+```lua
+-- plugin/init.lua
+local rktmb_deepseek_complete = require("rktmb-deepseek-complete")
+local curl = require('plenary.curl')
+
+local api_call_in_progress = false
+local last_api_call_time = 0
+
+_G.ns_id = vim.api.nvim_create_namespace('rktmb-deepseek-complete')
+
+_G.current_extmark_id = nil
+_G.current_suggestion = nil
+
+-- Default keymappings
+local default_opts = {
+  deepseek_api_key = os.getenv("DEEPSEEK_API_KEY"),
+  suggest_lines_keymap = "<M-ESC>",
+  accept_all_keymap = "<M-PageDown>",
+  accept_line_keymap = "<M-Down>",
+  accept_word_keymap = "<M-Right>",
+  debounce_time = 1000,
+}
+
+
+-- Read user configuration
+local user_opts = vim.tbl_deep_extend("force", default_opts, vim.g.rktmb_deepseek_complete_opts or {})
+
+local function process_deepseek_response(response)
+  vim.schedule(function()  -- Use vim.schedule to run this in the main thread
+    local response_body = vim.fn.json_decode(response.body)
+    if response_body.choices and #response_body.choices > 0 then
+      rktmb_deepseek_complete.clear_suggestion()
+      local choice = response_body.choices[1]
+      local suggestion = choice.message.content
+      rktmb_deepseek_complete.set_suggestion_extmark(suggestion)
+      _G.current_suggestion = suggestion
+      rktmb_deepseek_complete.log("\n\nSuggestion from DeepSeek API:")
+      rktmb_deepseek_complete.log(suggestion)
+    end
+  end)
+end
+
+_G.suggest = function()
+
+  local now = vim.loop.hrtime() / 1000000
+  if api_call_in_progress or (now - last_api_call_time < user_opts.debounce_time) then
+    rktmb_deepseek_complete.log("API call in progress or too recent, skipping.")
+    return
+  end
+
+  api_call_in_progress = true
+  last_api_call_time = now
+  local deepseek_request_body = {
+    model = "deepseek-chat",
+    echo = false,
+    frequency_penalty = 0,
+    max_tokens = 4096,
+    presence_penalty = 0,
+    stop = nil,
+    stream = false,
+    stream_options = nil,
+    temperature = 1,
+    top_p = 1,
+    messages = rktmb_deepseek_complete.build_messages_table(
+      rktmb_deepseek_complete.get_text_before_cursor(),
+      rktmb_deepseek_complete.get_text_after_cursor(),
+      rktmb_deepseek_complete.get_text_before_cursor_line()
+    )
+  }
+
+  -- Asynchronously make the POST request
+  curl.post('https://api.deepseek.com/chat/completions', {
+    body = vim.fn.json_encode(deepseek_request_body),
+    headers = {
+      ["Content-Type"] = "application/json",
+      ["Accept"] = "application/json",
+      ["Authorization"] = "Bearer " .. user_opts.deepseek_api_key
+    },
+    callback = function(response)
+      api_call_in_progress = false -- Reset the flag after receiving the response
+      process_deepseek_response(response)
+    end
+  })
+end
+
+
+vim.api.nvim_create_autocmd({"InsertLeave", "BufLeave"}, {
+    pattern = "*",
+    callback = function()
+        rktmb_deepseek_complete.clear_suggestion()
+    end
+})
+
+vim.api.nvim_create_autocmd("InsertCharPre", {
+  pattern = "*",
+  callback = function()
+    rktmb_deepseek_complete.clear_suggestion()
+  end
+})
+
+-- Key mappings
+vim.api.nvim_set_keymap("i", user_opts.suggest_lines_keymap  , "<Cmd>lua _G.suggest()<CR>",                                                   { noremap = true, silent = true })
+vim.api.nvim_set_keymap("i", user_opts.accept_word_keymap    , "<Cmd>lua require('rktmb-deepseek-complete').accept_suggestion_word()<CR>", { noremap = true, silent = true })
+vim.api.nvim_set_keymap("i", "<Space>", "<Cmd>lua _G.suggest()<CR><Space>", { noremap = true, silent = true })
+
+
+```
+
+Changes:
+
+*   **`lua/rktmb-deepseek-complete.lua`**: In `M.accept_suggestion_word()`:
+    *   The extmark is cleared only if there are no more words in the suggestion.
+    *   The `M.remove_markdown_delimiters` is called before extracting the first word.
+    *   The updated `_G.current_suggestion` is trimmed to remove leading/trailing whitespace.
+*   **`plugin/init.lua`**:
+    *   Added `<Space>` keymap to trigger suggestions.
+    *   Modified autocmds to clear suggestions on both `InsertLeave` and `BufLeave`, and to schedule the clearing of suggestions on `InsertCharPre`. This ensures suggestions are cleared consistently when leaving insert mode or the buffer, and also when typing any character.
+    *   The `suggest` function is now assigned to `_G.suggest` to make it accessible from the keymap.
+
+
+
 
