--- a/.ai-prompts.md
+++ b/.ai-prompts.md
@@ -1,4 +1,4 @@
-# Propose inline suggestions from DeepSeek API
+# Propose inline suggestions 
 
 The final purpose of this project is to be an inline suggestion plugin that uses the DeepSeek API to suggest completions.
 
@@ -47,13 +47,12 @@ This is the behavior I want.
 
 ## Step 7: accept the suggestion word by word
 
-Note: I want to implement the same accept word as Gihub Copilot and Supermaven Neovim plugins. I provided their code in the `./other-plugins` directory.
+Note: I want to implement the same accept word as Gihub Copilot and Supermaven Neovim plugins. 
 
-When a suggestion is displayed, I want the user to be able to accept one word with the `<M-Right>` key.
-As far as there is a suggestion, if the user presses `<M-Right>`, the first word of the suggestion is accepted and transformed into text at the same position.
+When a suggestion is displayed as extmark, I want that if I press `<M-Right>` key,
+the first word of the suggestion transformes into text at the same position.
 
-The suggestion might be on the same line as the cursor or on a different line: we have to handle that case.
+The space between the current cusor position and the first word of the suggestion must be preserved, if any.
 
-With the curent implementation, when the user presses `<M-Right>`, the suggestion is cleared.
+Givi me the code of the `M.accept_suggestion_word()` function that implements this behavior.
 
-Give me the modified code of the `M.accept_suggestion_word()` function that implements the behavior I want.
