handle multi line

--- a/.ai-prompts.md
+++ b/.ai-prompts.md
@@ -49,10 +49,19 @@ This is the behavior I want.
 
 Note: I want to implement the same accept word as Gihub Copilot and Supermaven Neovim plugins. 
 
-When a suggestion is displayed as extmark, I want that if I press `<M-Right>` key,
-the first word of the suggestion transformes into text at the same position.
+When a suggestion is displayed as extmark, when the user issues the `<M-Right>` key,
+the first word of the extmark is turned into text at the same position and the cursor is moved forward.
 
-The space between the current cusor position and the first word of the suggestion must be preserved, if any.
+That is the behavior I want.
 
-Givi me the code of the `M.accept_suggestion_word()` function that implements this behavior.
+However, when the extmark is multi-line, after issuing the `<M-Right>` key:
+- all the text of the current line is cleared.
+- the cursor is moved to begining of the current line.
+- the extmark is not cleared and I can accept extmark words one by one
+
+I want to keep the working features working as before, and handle correctly the multi-line extmarks.
+
+I want that if the extmark is multi-line, the cursor moves like I want above.
+
+Give me the code of the `M.accept_suggestion_word()` function that implements this behavior.
 
